{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 22,
  "lineage": "97a9c30c-01c6-85e6-ad9f-3fe2ebb5c3fe",
  "resources": [
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7441d7a8ec6ae1f",
            "domain": "vpc",
            "id": "eipalloc-0c7441d7a8ec6ae1f",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-153-70-98.us-west-1.compute.amazonaws.com",
            "public_ip": "54.153.70.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tutorial-us-west-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tutorial-us-west-1a",
              "terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932497772645:internet-gateway/igw-01ee2b53b210f221b",
            "id": "igw-01ee2b53b210f221b",
            "owner_id": "932497772645",
            "tags": {
              "Name": "tutorial",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tutorial",
              "terraform": "true"
            },
            "vpc_id": "vpc-00ae29fdd9ac35c76"
          },
          "dependencies": [
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7441d7a8ec6ae1f",
            "association_id": "eipassoc-03aafb9524cbf35ed",
            "connectivity_type": "public",
            "id": "nat-0aa14347f6348e758",
            "network_interface_id": "eni-04c3957bc27794925",
            "private_ip": "10.0.101.237",
            "public_ip": "54.153.70.98",
            "subnet_id": "subnet-05508b3b3f7093758",
            "tags": {
              "Name": "tutorial-us-west-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tutorial-us-west-1a",
              "terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_eip.nat",
            "module.vpc_tutorial.aws_internet_gateway.this",
            "module.vpc_tutorial.aws_subnet.public",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-043f4925c7554cd461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aa14347f6348e758",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-043f4925c7554cd46",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_eip.nat",
            "module.vpc_tutorial.aws_internet_gateway.this",
            "module.vpc_tutorial.aws_nat_gateway.this",
            "module.vpc_tutorial.aws_route_table.private",
            "module.vpc_tutorial.aws_subnet.public",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01ee2b53b210f221b",
            "id": "r-rtb-07ed7c0fe893c717a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07ed7c0fe893c717a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_tutorial.aws_internet_gateway.this",
            "module.vpc_tutorial.aws_route_table.public",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932497772645:route-table/rtb-043f4925c7554cd46",
            "id": "rtb-043f4925c7554cd46",
            "owner_id": "932497772645",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tutorial-private",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tutorial-private",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ae29fdd9ac35c76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932497772645:route-table/rtb-07ed7c0fe893c717a",
            "id": "rtb-07ed7c0fe893c717a",
            "owner_id": "932497772645",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tutorial-public",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tutorial-public",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ae29fdd9ac35c76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0239459ece1075435",
            "route_table_id": "rtb-043f4925c7554cd46",
            "subnet_id": "subnet-0019d5988f6a6a72e"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_route_table.private",
            "module.vpc_tutorial.aws_subnet.private",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049d12d922aa6b6ec",
            "route_table_id": "rtb-043f4925c7554cd46",
            "subnet_id": "subnet-02edbaaf61bc5edf4"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_route_table.private",
            "module.vpc_tutorial.aws_subnet.private",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd1fcb0f19798d0a",
            "route_table_id": "rtb-07ed7c0fe893c717a",
            "subnet_id": "subnet-05508b3b3f7093758"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_route_table.public",
            "module.vpc_tutorial.aws_subnet.public",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0852d72ce652189b2",
            "route_table_id": "rtb-07ed7c0fe893c717a",
            "subnet_id": "subnet-0182a1fdbcebef6d0"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_route_table.public",
            "module.vpc_tutorial.aws_subnet.public",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932497772645:subnet/subnet-0019d5988f6a6a72e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0019d5988f6a6a72e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932497772645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial-private-us-west-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tutorial-private-us-west-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-00ae29fdd9ac35c76"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932497772645:subnet/subnet-02edbaaf61bc5edf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02edbaaf61bc5edf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932497772645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial-private-us-west-1b",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tutorial-private-us-west-1b",
              "terraform": "true"
            },
            "vpc_id": "vpc-00ae29fdd9ac35c76"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932497772645:subnet/subnet-05508b3b3f7093758",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05508b3b3f7093758",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "932497772645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial-public-us-west-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tutorial-public-us-west-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-00ae29fdd9ac35c76"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932497772645:subnet/subnet-0182a1fdbcebef6d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0182a1fdbcebef6d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "932497772645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial-public-us-west-1b",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tutorial-public-us-west-1b",
              "terraform": "true"
            },
            "vpc_id": "vpc-00ae29fdd9ac35c76"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc_tutorial.aws_vpc.this",
            "module.vpc_tutorial.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_tutorial",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:932497772645:vpc/vpc-00ae29fdd9ac35c76",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04178ff7919e001e3",
            "default_route_table_id": "rtb-042af86104df7d188",
            "default_security_group_id": "sg-027d66878d2eb33f5",
            "dhcp_options_id": "dopt-08c9006af065cb130",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ae29fdd9ac35c76",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042af86104df7d188",
            "owner_id": "932497772645",
            "tags": {
              "Name": "tutorial",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tutorial",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}